# koine_greek_keyboard

./: .gitignore  README.md  pyproject.toml
src/koine_greek_converter/core/: cursor.py  cursorable.py  text_field.py  utils.py
src/koine_greek_keyboard/core/: cursor.py  key.py  text_field.py
src/koine_greek_transpiler/common/: cursor.py  cursorable.py  greek_letter.py  utils.py
tests/: test_cursor.py  test_text_field.py
